[package]
name = "big_space"
version = "0.10.0"
edition = "2021"
description = "A floating origin plugin for bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "floating-origin", "large-scale", "space"]
repository = "https://github.com/aevyrie/big_space"
documentation = "https://docs.rs/crate/big_space/latest"
exclude = ["assets"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
debug = ["std"]
camera = ["std"]
i8 = []
i16 = []
i32 = []
i64 = []
i128 = []
std = []
libm = ["dep:libm"]

[dependencies]
smallvec = { version = "1.13.2", default-features = false } # Already used by bevy in commands
bevy = { path = "../bevy" }
libm = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
bevy = { path = "../bevy", features = ["bevy_remote"] }
noise = "0.9"
turborand = "0.10"
criterion = "0.5"
bevy-inspector-egui = "0.31.0"
bevy_egui = "0.34.1"
bevy_hanabi = "0.16"

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "debug"
path = "examples/debug.rs"
required-features = ["debug"]
doc-scrape-examples = false

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["i128", "camera", "debug"]
doc-scrape-examples = false

[[example]]
name = "error"
path = "examples/error.rs"
doc-scrape-examples = false

[[example]]
name = "error_child"
path = "examples/error_child.rs"
required-features = ["camera", "debug"]
doc-scrape-examples = false

[[example]]
name = "infinite"
path = "examples/infinite.rs"
required-features = ["i8", "camera", "debug"]
doc-scrape-examples = false

[[example]]
name = "minimal"
path = "examples/minimal.rs"
required-features = ["camera", "debug"]
doc-scrape-examples = false

[[example]]
name = "planets"
path = "examples/planets.rs"
required-features = ["camera"]
doc-scrape-examples = false

[[example]]
name = "small_scale"
path = "examples/small_scale.rs"
required-features = ["camera", "debug"]
doc-scrape-examples = false

[[example]]
name = "spatial_hash"
path = "examples/spatial_hash.rs"
required-features = ["camera"]
doc-scrape-examples = false

[[example]]
name = "split_screen"
path = "examples/split_screen.rs"
required-features = ["camera", "debug"]
doc-scrape-examples = false

[[example]]
name = "dynamic_spawn"
path = "examples/dynamic_spawn.rs"
required-features = ["camera", "debug"]
doc-scrape-examples = false
