[package]
name = "big_space"
version = "0.11.0"
edition = "2021"
description = "A floating origin plugin for bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "floating-origin", "large-scale", "space"]
repository = "https://github.com/aevyrie/big_space"
documentation = "https://docs.rs/crate/big_space/latest"
exclude = ["assets"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
debug = ["std", "bevy_gizmos", "bevy_color"]
camera = ["std", "bevy_camera", "bevy_time", "bevy_input"]
i8 = []
i16 = []
i32 = []
i64 = []
i128 = []

std = [
    "bevy_app/std",
    "bevy_ecs/std",
    "bevy_math/std",
    "bevy_reflect/std",
    "bevy_transform/std",
    "bevy_utils/std",
    "bevy_platform/std",
    "bevy_color?/std",
    "bevy_input?/std",
    "bevy_time?/std",
]
libm = ["bevy_math/libm", "dep:libm"]

[dependencies]
smallvec = { version = "1.15.0", default-features = false } # Already used by bevy in commands
bevy_app = { version = "0.17.1", default-features = false, features = [
    "bevy_reflect",
] }
bevy_ecs = { version = "0.17.1", default-features = false }
bevy_log = { version = "0.17.1", default-features = false }
bevy_math = { version = "0.17.1", default-features = false }
bevy_reflect = { version = "0.17.1", default-features = false, features = [
    "glam",
] }
bevy_image = { version = "0.17.1", default-features = false, features = ["zstd_rust"] }
bevy_tasks = { version = "0.17.1", default-features = false }
bevy_transform = { version = "0.17.1", default-features = false, features = [
    "bevy-support",
    "bevy_reflect",
] }
bevy_utils = { version = "0.17.1", default-features = false }
bevy_platform = { version = "0.17.1", default-features = false, features = [
    "alloc",
] }
# Optional
bevy_color = { version = "0.17.1", default-features = false, optional = true }
bevy_gizmos = { version = "0.17.1", default-features = false, optional = true }
bevy_camera = { version = "0.17.1", default-features = false, optional = true }
bevy_input = { version = "0.17.1", default-features = false, optional = true }
bevy_time = { version = "0.17.1", default-features = false, optional = true }
libm = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
bevy = { version = "0.17.1", default-features = false, features = [
    "bevy_scene",
    "bevy_render",
    "bevy_post_process",
    "bevy_asset",
    "bevy_color",
    "bevy_gltf",
    "bevy_remote",
    "bevy_winit",
    "default_font",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_pbr",
    "bevy_gizmos",
    "animation",
    "bevy_window",
    "x11",
    "tonemapping_luts",
    "multi_threaded",
    "png",
    "reflect_auto_register"
] }
noise = "0.9"
turborand = "0.10"
criterion = "0.7"

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "debug"
path = "examples/debug.rs"
required-features = ["debug"]
doc-scrape-examples = false

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["i128", "camera", "debug"]
doc-scrape-examples = false

[[example]]
name = "error"
path = "examples/error.rs"
doc-scrape-examples = false

[[example]]
name = "error_child"
path = "examples/error_child.rs"
required-features = ["camera", "debug"]
doc-scrape-examples = false

[[example]]
name = "infinite"
path = "examples/infinite.rs"
required-features = ["i8", "camera", "debug"]
doc-scrape-examples = false

[[example]]
name = "minimal"
path = "examples/minimal.rs"
required-features = ["camera", "debug"]
doc-scrape-examples = false

[[example]]
name = "planets"
path = "examples/planets.rs"
required-features = ["camera"]
doc-scrape-examples = false

[[example]]
name = "small_scale"
path = "examples/small_scale.rs"
required-features = ["camera", "debug", "i128"]
doc-scrape-examples = false

[[example]]
name = "spatial_hash"
path = "examples/spatial_hash.rs"
required-features = ["camera"]
doc-scrape-examples = false

[[example]]
name = "split_screen"
path = "examples/split_screen.rs"
required-features = ["camera", "debug"]
doc-scrape-examples = false
