[package]
name = "big_physics"
version = "0.1.0"
edition = "2021"

[dependencies]
big_space = { version = "0.9", path = "../.." }
tracing = { workspace = true }
smallvec = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_hierarchy = { workspace = true }
bevy_math = { workspace = true }
bevy_reflect = { workspace = true }
bevy_tasks = { workspace = true }
bevy_transform = { workspace = true }
bevy_utils = { workspace = true }
